# racecar-patrol-security

./: .gitignore  README.md
docs/: AI_HANDOFF_20260401.md  codebase-overview.md  face-recognition-notes.md  file-map-notes.md  sync_patrol_stack_to_car.py  项目总日志_20260401.md
face_tools/: build_face_db.py  capture_face_on_car.py  capture_patrol_waypoint.py  car_sender.py  collect_mapping_evidence.sh  drive_arbiter.py  enroll_face_and_sync.py  face_follow_controller.py  fallback_local_manager.py  force_build_f.sh  hallway_loop_v1_waypoints.json  initialize_protocol_states.py  input_chain_ab_README.txt  input_chain_ab_switch.sh  kick_lslidar_order.py  motion_arbiter.py  patrol_preflight_check.py  patrol_supervisor.py  patrol_waypoints_demo.json  patrol_waypoints_forward_0p8.json  patrol_waypoints_test_20260406.json  pc_status_bridge.py  publish_initial_pose.py  run_car_sender.sh  run_drive_arbiter_protocol_tests.py  run_face_follow_stack.sh  run_face_follow_stack_pc_remote_yolo.sh  run_follow_demo_full_stack.sh  run_follow_state_injection_tests.py  run_intruder_follow_demo_full_stack.sh  run_intruder_patrol_demo_full_stack.sh  run_intruder_patrol_demo_full_stack_pc_remote_yolo.sh  run_mapping_stack.sh  run_nav_stack_with_params.sh  run_navigation_test_full_stack.sh  run_pc_led_follow_stack.sh  run_ros_env.sh  run_yolo_face_track.sh  save_current_map.sh  start_rviz_now.sh  (+3 more)
face_tools/input_chain_ab/current_snapshot/: encoder_node.py  imu_encoder_mix.cpp  odom_tf.cpp
home/racecar/: Run_car.sh  Run_gmapping.sh  alarm_system_README.md  nav.sh  run_classroom_navigation.sh  save.sh  start_alarm.sh  start_alarm_fixed.sh  test_alarm_sound.py  test_direct_sound.py
home/racecar/src/encoder/: package.xml  setup.py
home/racecar/src/encoder/encoder/: encoder_imu.py  encoder_node.py  test.py
home/racecar/src/encoder_imu/: CMakeLists.txt  package.xml
home/racecar/src/encoder_imu/src/: imu_encoder_mix.cpp
home/racecar/src/hipnuc_imu/config/: ekf_params.yaml  hipnuc_config.yaml
home/racecar/src/hipnuc_imu/launch/: Run_car.launch.py  gampping.launch.py  imu_spec_msg.launch.py
home/racecar/src/hipnuc_imu/src/: serial_port.cpp  sub_spec.cpp
home/racecar/src/lslidar_driver/launch/: lslidar_launch.py
home/racecar/src/lslidar_driver/params/: lsx10.yaml  lsx10_1.yaml  lsx10_2.yaml
home/racecar/src/lslidar_driver/src/: lsiosr.cpp  lslidar_driver.cc
home/racecar/src/multi_goal_ros2/: test.csv
home/racecar/src/multi_goal_ros2/multi_goal_ros2/src/: get_points.py  gool_loop.py
home/racecar/src/multi_goal_ros2/src/: get_points.py  goal_l.py  gool_loop.py  test.csv
home/racecar/src/odom_tf/: CMakeLists.txt
home/racecar/src/odom_tf/src/: odom_tf.cpp
home/racecar/src/openslam_gmapping/include/gmapping/particlefilter/: particlefilter.h
home/racecar/src/racecar/: CMakeLists.txt  odom_calibration.py  package.xml
home/racecar/src/racecar/config/camera/: params_1.yaml  params_2.yaml
home/racecar/src/racecar/config/ekf/: ekf.yaml
home/racecar/src/racecar/config/laser_box/: x4_laser_filter.yaml
home/racecar/src/racecar/config/nav/: navigation.yaml  navigation_patrol_safe.yaml
home/racecar/src/racecar/launch/: Run_car.launch.py  Run_gmapping.launch.py  Run_mapping.launch.py  alarm_test.launch.py  amcl.launch.py  amcl_nav.launch.py  b.launch.py  b12.launch.py  classroom_nav.launch.py  enhanced_alarm.launch.py  nav.launch.py  navv2.launch.py  navv23.launch.py  sensor.launch.py  test.launch.py
home/racecar/src/racecar/map/: hallway_loop_v1.pgm  hallway_loop_v1.yaml  my.pgm  my.yaml  my_map.pgm  my_patrol2_map.pgm  my_patrol2_map.yaml  my_patrol_map.pgm  my_patrol_map.yaml  mymap.pgm  mymap.yaml  test_map.pgm  test_map.yaml
home/racecar/src/racecar/maps/: ceshi1.yaml  test_map.pgm
home/racecar/src/racecar/rviz/: odom.rviz
home/racecar/src/racecar/scripts/: alarm_monitor.py  alarm_node_simple.py  alarm_test.py  detct.py  detct_headless.py  enhanced_alarm_node.py  face_yolov5_acl_ros2_node.py  get.py  go.py  hsv_show.py  navigation_test.py  racecar_teleop.py  record.py  start_alarm_system.py  test.csv
home/racecar/src/racecar/src/: car_control_all.cpp  car_controller_new.cpp  laser_2d_new.cpp  my_car_control_new.cpp  scan_node.cpp
home/racecar/src/racecar_driver/: CMakeLists.txt  package.xml
home/racecar/src/racecar_driver/src/: racecar_driver_node.cpp
home/racecar/src/rf2o_laser_odometry/launch/: rf2o_laser_odometry.launch.py
home/racecar/src/robot_navigation2/: CMakeLists.txt  package.xml
home/racecar/src/robot_navigation2/maps/: my_map.pgm
home/racecar/src/scripts/: 1.sh
home/racecar/src/slam_gmapping/: CMakeLists.txt
home/racecar/src/slam_gmapping/include/slam_gmapping/: slam_gmapping.h
home/racecar/src/slam_gmapping/launch/: slam_gmapping.launch.py
home/racecar/src/slam_gmapping/params/: slam_gmapping.yaml
root/: alarm_atlas.py  alarm_buzzer.py  alarm_buzzer.sh  alarm_buzzer_gpiod.py  alarm_node.py  alarm_system.sh  audio_alarm.py  check_gpio.py  codex_speed_backup_20260406_0p1_before_sync.py  combo_alarm.py  enhanced_alarm_node.py  fusion_result.json  gpio_buzzer.py  integrate_alarm.sh  led_alarm.py  obstacle_alarm.py  run_local_yolov5_stream.sh  run_remote_yolo26_stream.sh  run_yolo_bbox.sh  run_yolo_v5_stream.sh  setup.py  yolo_om_cam_bbox.py  yolo_v5_stream.py
root/ros2_ws/src/alarm_pkg/: package.xml  setup.cfg  setup.py
root/yolo/: detect_om.py
root/yolo/acllite/: acllite_image.py  acllite_model.py  acllite_resource.py  acllite_utils.py
root/yolo_test/: detect_person_simple.py
root/yolo_test1/: stream_camera.py
