<?xml version="1.0"?>
<package format="3">
  <name>racecar_driver</name>
  <version>0.1.0</version>
  <description>The racecar_driver package</description>

  <maintainer email="a@a.com">***</maintainer>

  <license>TODO</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>rclcpp</build_depend>
  <build_depend>geometry_msgs</build_depend>

  <exec_depend>rclcpp</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>